--- a/css/main.css
+++ b/css/main.css
@@ -125,6 +125,34 @@ a {
     position: absolute;
     top: 32%;
     left: 78px;
+    /* transform: translateY(-50%); */
+}
+
+.header-seemore {
+    font-weight: 600;
+    letter-spacing: 0.1em;
+    position: absolute;
+	left: 76px;
+	bottom: 62px;
+
+	padding-left: 58px;
+
+	color: rgba(255, 255, 255, 0.6);
+	/* writing-mode: vertical-lr; */
+	transform: rotate(-90deg);
+	transform-origin: left top;
+}
+
+.header-seemore::before {
+    position: absolute;
+    left: 0;
+    top: calc( 50% - 1.5px);
+    content: '';
+    display: block;
+    width: 38px;
+    height: 3px;
+    background-color: #FFFFFF;
+    opacity: 0.3;
 }
 
 .header-tips {
