--- a/css/main.css
+++ b/css/main.css
@@ -202,3 +202,65 @@ a {
     opacity: 0.4;
     margin-top: 4px;
 }
+
+/* Slider */
+
+.tns-nav {
+	position: absolute;
+	z-index: 9;
+	top: 50%;
+	right: 100px;
+	transform: translateY(-50%);
+}
+
+.tns-nav button {
+	display: block;
+	width: 2px;
+	height: 80px;
+	background-color: rgba(255, 255, 255, 0.3);
+}
+
+.tns-nav button.tns-nav-active {
+	background-color: rgba(255, 255, 255, 1);
+}
+
+/* Slider Controls */
+
+.header-slider-controls {
+	z-index: 9;
+	position: absolute;
+	right: 49px;
+	bottom: 77px;
+
+	/* display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    row-gap: ; */
+
+	display: grid;
+	gap: 15px;
+}
+
+.header-slider-controls__arrows {
+	display: flex;
+	gap: 5px;
+}
+
+.header-slider-controls__count {
+	padding-left: 16px;
+	display: flex;
+	gap: 6px;
+	align-items: flex-end;
+
+	color: rgba(255, 255, 255, 0.3);
+	font-size: 18px;
+	font-weight: 600;
+	line-height: 1;
+	text-align: right;
+}
+
+.header-slider-controls__count-current {
+	font-size: 32px;
+	line-height: 0.75;
+	color: #fff;
+}
